--- a/aboutme.html
+++ b/aboutme.html
@@ -104,11 +104,11 @@
         </ol>
         <p>Ici, je vais me présenter.
 
-Je suis un jeune développeur ayant commencé en décembre 2021 sur un projet de roleplay post-apocalyptique sur le jeu Garry's Mod. À l'origine, c'est mon cousin qui m'a montré les bases de la configuration de serveurs, mais, grâce à ma détermination, j'ai décidé d'apprendre à créer moi-même des contenus. C'est ainsi que j'ai commencé le développement pour la première fois. J'ai rapidement compris que cela me plaisait et que c'était ce que je voulais faire plus tard. J'ai alors travaillé pendant deux ans, jusqu'à lancer mon plus gros projet de l'époque : SY Half Life 2 RP. Après de longues heures de développement, le serveur a enfin ouvert ses portes au public. Grâce au travail acharné investi dans ce projet, le serveur a rencontré un franc succès, avec une moyenne de 20 joueurs, ce qui est impressionnant pour Garry's Mod.
+Je suis un jeune développeur ayant commencé en décembre 2021 sur un projet de roleplay post-apocalyptique sur le jeu Garry's Mod. À l'origine, c'est mon cousin qui m'a montré les bases de la configuration de serveurs, mais, grâce à ma détermination, j'ai décidé d'apprendre à créer moi-même des contenus. C'est ainsi que j'ai commencé le développement pour la première fois. J'ai rapidement compris que cela me plaisait et que c'était ce que je voulais faire plus tard. J'ai alors travaillé pendant deux ans, jusqu'à lancer mon plus gros projet de l'époque : SY Half Life 2 RP. Après de longues heures de développement, le serveur a enfin ouvert ses portes au public. Grâce au travail acharné investi dans ce projet, le serveur a rencontré un franc succès, avec une moyenne de 20 joueurs, ce qui est plutot pas mal on va dire pour Garry's Mod.
 
 Suite à ce succès, j'ai attiré l'attention d'un développeur reconnu dans le monde de Garry's Mod, qui m'a permis de perfectionner encore mes compétences. Malheureusement, SY a dû fermer ses portes en raison de problèmes d'administration. Après un moment de réflexion, j'ai décidé de me lancer dans un nouveau projet, toujours en développement : AYS Post Apo RP. Cependant, au fil du temps, les problèmes de code se sont accumulés, et ma motivation a fini par décliner.
 
-Je savais pourtant que je ne pouvais pas abandonner si facilement ; il était essentiel pour moi de continuer à progresser. C'est pour cette raison que j'ai pris une petite pause avant de reprendre le projet SY HL2RP, dans le but de le sortir de façon définitive.</p>
+Je savais pourtant que je ne pouvais pas abandonner si facilement ; il était essentiel pour moi de continuer à progresser. C'est pour cette raison que je me suis donner a fond pour faire des choses encore plus impressionantes j'ai continuer et le projet avance grandement.</p>
     </section> 
     <section id="presentation" class="fade-in">
         <h2>Me contacter.</h2>
@@ -126,10 +126,10 @@ Je savais pourtant que je ne pouvais pas abandonner si facilement ; il était es
     <section id="info-panel">
         <h2>Mes Informations</h2>
         <ul>
-            <li><span>Email:</span> kylian.fourmy77650@gmail.com</li>
-            <li><span>Téléphone:</span> 07 50 57 03 90</li>
-            <li><span>Lycée:</span> Le lycée La Fayette - Site de Fontaineroux</li>
-            <li><span>Âge:</span> 16 ans</li>
+            <li><span>Email:</span> *******************@gmail.com</li>
+            <li><span>Téléphone:</span> ** ** ** ** **</li>
+            <li><span>Lycée:</span> Le lycée La Fayette</li>
+            <li><span>Âge:</span> 17 ans</li>
         </ul>
     </section>
 
