--- a/ayspostapo.html
+++ b/ayspostapo.html
@@ -7,16 +7,36 @@
     <title>AYS POST APO</title>
     <link rel="icon" href="icon/ayslogo.png">
 </head>
+<style>
+@font-face {
+    font-family: 'Destruction Manual'; /* nom personnalisé que tu vas utiliser */
+    src: url('font/apofont.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+    font-family: 'Destruction Manual', sans-serif;
+        font-size: 25px; /* ← augmente cette valeur selon ton besoin */
+}
+
+</style>
 <body>
+        <div class="background-effects">
+    <div class="logo-animation" style="left: 10%; animation-delay: 0s;"></div>
+    <div class="logo-animation" style="left: 40%; animation-delay: 3s;"></div>
+    <div class="logo-animation" style="left: 70%; animation-delay: 6s;"></div>
+    <div class="logo-animation" style="left: 90%; animation-delay: 9s;"></div>
+
+    <div class="background-effects">
+        </div>
+        <!-- Arrière-plan avec effets -->
+    </div>
     <header>
-    <img src="icon/ayslogo.png" alt="Shifman Project" width="165" height="auto" >
-
-
-            <a href="auth.html" id="logout-button" class="logout">
-        <img src="icon/logout.png" alt="SY HALF LIFE²" width="75" height="auto">
-    </a>
-
-    
+        <img src="icon/ayslogo.png" alt="Shifman Project" width="165" height="auto">
+        <a href="auth.html" id="logout-button" class="logout">
+            <img src="icon/logout.png" alt="SY HALF LIFE²" width="75" height="auto">
+        </a>
     </header>
     <nav>
         <a href="index.html">
