--- a/syhl2.html
+++ b/syhl2.html
@@ -7,9 +7,19 @@
     <title>SY HALF LIFE² BETA</title>
     <link rel="icon" href="icon/SYHALFLIFE.png">
 
-    <style>
+<style>
+@font-face {
+    font-family: 'Nagonia';
+    src: url('font/Nagonia.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
 
-    </style>
+body {
+    font-family: 'Nagonia', sans-serif;
+}
+</style>
+
 </head>
 
 <body>
