--- a/aboutme.html
+++ b/aboutme.html
@@ -146,10 +146,10 @@ Je savais pourtant que je ne pouvais pas abandonner si facilement ; il était es
     <section id="info-panel">
         <h2>Mes Informations</h2>
         <ul>
-            <li><span>Email:</span> kylian.fourmy77650@gmail.com</li>
-            <li><span>Téléphone:</span> 07 50 57 03 90</li>
-            <li><span>Lycée:</span> Le lycée La Fayette - Site de Fontaineroux</li>
-            <li><span>Âge:</span> 16 ans</li>
+            <li><span>Email:</span> *******************@gmail.com</li>
+            <li><span>Téléphone:</span> ** ** ** ** **</li>
+            <li><span>Lycée:</span> ***** ** *******</li>
+            <li><span>Âge:</span> ** ans</li>
         </ul>
     </section>
 
